--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl" dir="ltr">
     <head>
-        <title>Coming soon! | Template by Mateusz Ożóg</title>
+        <title>Coming soon!</title>
         <!-- Metainformation -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <meta name="author" content="Mateusz Ożóg">
         <!-- Styles -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/app.css">
@@ -17,25 +16,20 @@
         <div id="app">
             <nav class="navbar">
                 <a href="#"><div class="logo"></div></a>
-                <div class="menu">
-                    <a href="#" class="menu-item">ABOUT</a>
-                    <a href="#" class="menu-item">CONTACT</a>
-                </div>
             </nav>
             <div class="text">
                 <h1>COMING SOON</h1>
-                <p id="timer" class="pb-5"><span id="days"></span> DAYS <span id="hours"></span> HOURS <span id="minutes"></span> MINUTES <span id="seconds"></span> SECONDS</p>
-                <p class="m-0 small pb-3">I'll be here soon, click on "Notify Me!" to be ready for the Grand Day!</p>
-                <a href="#" class="btn btn-lg">Notify Me!</a>
+                <p id="timer" class="pb-5">
+                    <span id="days"></span> DAYS 
+                    <span id="hours"></span> HOURS 
+                    <span id="minutes"></span> MINUTES 
+                    <span id="seconds"></span> SECONDS
+                </p>
             </div>
             <div class="copyright">
                 <div class="text">
                     <p class="mb-2">
-                        Website by Mateusz Ożóg.
-                    </p>
-                    <p class="links m-0">
-                        <a href="https://github.com/Azurixa/"><i class="bx bxl-github"></i></a>
-                        <a href="https://pl.pinterest.com/Aazurix/"><i class='bx bxl-pinterest'></i></a>
+                        Website by NONTEX.
                     </p>
                 </div>
             </div>
@@ -46,3 +40,4 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
 </html>
+
