--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="copyright">
                 <div class="text">
                     <p class="mb-2">
-                        Website by NONTEX.
+                        nontex.com.tr
                     </p>
                 </div>
             </div>
