--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         body {
             height: 100vh;
             display: flex;
-            justify-content: flex-start; /* İçerik yukarıya hizalandı */
+            flex-direction: column;
             align-items: center;
             text-align: center;
             background: url('assets/img/bg.jpg') no-repeat center center fixed;
             background-size: cover;
             position: relative;
             color: #fff;
-            padding-top: 50px; /* Üstten boşluk */
         }
 
         /* Overlay */
@@ -34,14 +33,17 @@
 
         #app {
             position: relative;
-            z-index: 1; /* overlay’in üstünde */
+            z-index: 1;
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .logo {
             width: 120px;
             height: 120px;
-            margin: 0 auto 20px auto;
+            margin-top: 20px; /* Çok yukarıda, ama üstten biraz boşluk */
             background: url('assets/img/logo.png') no-repeat center center;
             background-size: contain;
         }
@@ -49,7 +51,7 @@
         h1 {
             font-size: 3rem;
             letter-spacing: 5px;
-            margin-bottom: 20px;
+            margin: 30px 0 20px 0; /* Logodan biraz aşağıya */
         }
 
         #timer {
