--- a/index.html
+++ b/index.html
@@ -40,29 +40,34 @@
             align-items: center;
         }
 
+        /* Logo en üstte */
         .logo {
             width: 120px;
             height: 120px;
-            margin-top: 20px; /* Çok yukarıda, ama üstten biraz boşluk */
+            margin-top: 10px; /* Üstten çok az boşluk */
             background: url('assets/img/logo.png') no-repeat center center;
             background-size: contain;
         }
 
+        /* Başlık */
         h1 {
             font-size: 3rem;
             letter-spacing: 5px;
-            margin: 30px 0 20px 0; /* Logodan biraz aşağıya */
+            margin: 30px 0 10px 0; /* logo ile başlık arası ve başlık ile sayaç arası */
         }
 
+        /* Sayaç */
         #timer {
             font-size: 1.5rem;
             letter-spacing: 2px;
+            margin-top: 0; /* başlık ile arası kontrol */
         }
 
         #timer span {
             font-weight: bold;
         }
 
+        /* Footer */
         .copyright {
             position: absolute;
             bottom: 20px;
@@ -124,3 +129,4 @@
 
 </body>
 </html>
+
