--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         #timer {
             font-size: 1.5rem;
             letter-spacing: 2px;
-            margin-top: 0; /* başlık ile arası kontrol */
+            margin-top: 50px; /* başlık ile arası kontrol */
         }
 
         #timer span {
