--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="copyright">
-        nontex.com.tr
+        nontex.com.tr - nontextekstil@gmail.com
     </div>
 
     <script>
